--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>CC.Creditcard – The CreditCard Collection Brand Hub</title>
-  <meta name="description" content="Discover CC.Creditcard, the brand identity behind The CreditCard Collection. Understand how the .creditcard namespace, hubs and minisites fit together into one independent comparison ecosystem." />
+  <title>CC.Creditcard – The CreditCard Collection by ronarn</title>
+  <meta name="description" content="CC.Creditcard is the brand root of The CreditCard Collection — an independent educational network explaining credit card features, technology, loyalty, rewards and travel usage." />
   <meta name="robots" content="index,follow" />
   <link rel="canonical" href="https://cc.creditcard/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="CC.Creditcard – The CreditCard Collection Brand Hub" />
-  <meta property="og:description" content="CC.Creditcard explains the identity, structure and purpose of The CreditCard Collection: an independent network of .creditcard microsites and comparison tools." />
+  <meta property="og:title" content="CC.Creditcard – The CreditCard Collection" />
+  <meta property="og:description" content="Neutral, structured credit-card education across 150+ premium domains. Operated by ronarn AS (Norway)." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://cc.creditcard/" />
-  <meta property="og:image" content="https://choose.creditcard/preview.png?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=og_image" />
+  <meta property="og:image" content="https://choose.creditcard/preview.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="CC.Creditcard – The CreditCard Collection Brand Hub" />
-  <meta name="twitter:description" content="Learn what CC.Creditcard stands for, how the .creditcard namespace is used, and how all minisites connect back to independent comparison hubs." />
-  <meta name="twitter:image" content="https://choose.creditcard/preview.png?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=twitter_image" />
+  <meta name="twitter:title" content="CC.Creditcard – The CreditCard Collection" />
+  <meta name="twitter:description" content="Independent card-education network across premium .creditcard domains." />
+  <meta name="twitter:image" content="https://choose.creditcard/preview.png" />
 
   <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FE63JQ3H"></script>
@@ -31,217 +31,119 @@
     gtag('config', 'G-64FE63JQ3H');
   </script>
 
-  <!-- Tailwind for utility classes -->
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Your shared minisite styles -->
   <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body class="bg-slate-950 text-slate-100">
-  <header class="site-header">
-    <div class="nav-inner max-w-6xl">
-      <div class="brand">
-        <div class="cc-logo">CC</div>
-        <div class="brand-text">
-          <div class="brand-title">CC.Creditcard</div>
-          <div class="brand-subtitle">The CreditCard Collection Identity</div>
-        </div>
+
+<header class="site-header">
+  <div class="nav-inner max-w-6xl">
+    <div class="brand">
+      <div class="cc-logo">CC</div>
+      <div class="brand-text">
+        <div class="brand-title">CC.Creditcard</div>
+        <div class="brand-subtitle">The CreditCard Collection</div>
       </div>
-      <nav class="nav-links" aria-label="Page navigation">
-        <a href="#overview">Overview</a>
-        <a href="#mechanics">How It Works</a>
-        <a href="#compare">Compare</a>
-      </nav>
     </div>
-  </header>
+    <nav class="nav-links">
+      <a href="#network">Network</a>
+      <a href="#links">Hubs</a>
+      <a href="#about">About</a>
+    </nav>
+  </div>
+</header>
 
-  <main class="cc-page">
-    <!-- Breadcrumb -->
-    <div class="cc-breadcrumb">
-      <a href="https://choose.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=breadcrumb">Home</a>
-      &nbsp;›&nbsp;
-      CC.Creditcard
+<main class="cc-page">
+
+  <!-- Hero -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>The Brand Root of The CreditCard Collection</h1>
+      <p class="hero-lead">
+        CC.Creditcard represents the entire network of independent, educational credit-card microsites created by ronarn AS.
+        Explore card features, loyalty ecosystems, travel benefits, technology, crypto integrations and payment methods across 150+ structured minisites.
+      </p>
+      <div class="flex flex-wrap gap-3 mt-6">
+        <a class="cta" href="https://choose.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hero_choose">Go to Choose.Creditcard</a>
+        <a class="cta-secondary" href="https://fin.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hero_fin">Visit Fin.Creditcard</a>
+      </div>
     </div>
+  </section>
 
-    <!-- Hero -->
-    <section class="hero">
-      <div class="hero-content">
-        <h1>The Brand Behind The CreditCard Collection</h1>
-        <p class="hero-lead">
-          CC.Creditcard is the short-hand for “credit card” across the entire .creditcard namespace. This page explains how the brand, the domains and the independent comparison hubs fit together into one coherent ecosystem.
-        </p>
-        <a class="cta" href="https://choose.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hero_cta">
-          Enter the main Choose.Creditcard hub
-        </a>
-      </div>
-    </section>
-
-    <!-- Content sections -->
-    <section id="overview" class="section">
-      <h2>What Is CC.Creditcard?</h2>
-      <p>
-        CC.Creditcard is the identity layer for The CreditCard Collection, a network of independent microsites focused on specific card topics, technologies and use cases. “CC” is a natural abbreviation for “credit card”, making this domain a clean reference point for the whole project.
-      </p>
-      <p>
-        Instead of one large, unfocused website, the ecosystem is split into themed minisites — travel cards, technology, crypto-linked products, credit score topics and more. CC.Creditcard sits above these spokes, representing the overall standard of neutrality, documentation-first content and clear user journeys.
-      </p>
-    </section>
-
-    <section id="mechanics" class="section">
-      <h2>How The CreditCard Collection Is Structured</h2>
-      <p>
-        At the centre of the network is Choose.Creditcard, the comparison hub where products are evaluated by fees, rewards, protections and technology. Around it, premium .creditcard domains act as “explainer” spokes, each dedicated to a narrow topic like virtual cards, BINs, crypto payments or loyalty schemes.
-      </p>
-      <p>
-        Every minisite uses the same design language and links back to the relevant hub on Choose.Creditcard. This creates a predictable experience: you learn the concept on a spoke, then switch to the hub when you are ready to see categories, filters and side-by-side comparisons. CC.Creditcard simply makes that architecture visible and memorable.
-      </p>
-    </section>
-
-    <section class="section">
-      <h2>Why Use a Dedicated .Creditcard Namespace?</h2>
-      <p>
-        The .creditcard extension signals, right in the URL, that a site is about card products or card-related infrastructure. That helps users understand context before they even read a headline, and makes each minisite feel like a specialised reference rather than a generic blog post.
-      </p>
-      <p>
-        Using multiple, well-chosen domains also allows the ecosystem to map closely to how people search and think. A user curious about crypto payments might land on CryptoPay.Creditcard, while someone researching chargebacks could arrive at a different spoke — but both can be guided to the same independent comparison core.
-      </p>
-    </section>
-
-    <section class="section">
-      <h2>Neutral, Documentation-First Card Information</h2>
-      <p>
-        The guiding principle behind CC.Creditcard and all connected sites is to separate explanation from promotion. Content is written to mirror how features appear in cardholder agreements, scheme rules and regulatory guidance, rather than highlighting one issuer or programme over another.
-      </p>
-      <p>
-        Where commercial links are present, they are treated as navigation rather than recommendations. Users are encouraged to read full terms, compare multiple options and consider how fees, rewards and protections apply to their own spending patterns before making decisions.
-      </p>
-    </section>
-
-    <section class="section">
-      <h2>Who The Ecosystem Is Built For</h2>
-      <p>
-        The CreditCard Collection is designed for people who want to understand how cards work before they commit — from everyday cardholders to fintech builders and policy observers. Some visitors come with a single question; others want to see how technology, regulation and economics intersect in the card world.
-      </p>
-      <p>
-        By using consistent structure across minisites, the ecosystem makes it easy to move from beginner-friendly overviews to deeper dives. CC.Creditcard, as the brand hub, signals that everything you are reading is part of the same independent, documentation-based project.
-      </p>
-    </section>
-
-    <!-- Comparison block -->
-    <section id="compare" class="section">
-      <h2>Comparing Credit Cards the CC.Creditcard Way</h2>
-      <div class="table-wrap">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Focus Area</th>
-              <th>What We Emphasise</th>
-              <th>Why It Matters</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Transparency</td>
-              <td>Clear explanation of fees, interest rules and limitations</td>
-              <td>Prevents surprises on statements and makes trade-offs explicit.</td>
-            </tr>
-            <tr>
-              <td>Real-World Use</td>
-              <td>How cards behave when travelling, shopping online or using subscriptions</td>
-              <td>Most value or pain points appear in daily use, not in marketing copy.</td>
-            </tr>
-            <tr>
-              <td>Protections</td>
-              <td>Chargeback rights, purchase protection and travel-related coverage</td>
-              <td>Determines how well you are shielded when something goes wrong.</td>
-            </tr>
-            <tr>
-              <td>Rewards Structure</td>
-              <td>How rewards are earned, capped, valued and redeemed</td>
-              <td>Ensures the headline reward rate aligns with your actual spending mix.</td>
-            </tr>
-            <tr>
-              <td>Technology</td>
-              <td>Support for virtual cards, wallets, tokens and security features</td>
-              <td>Modern card tooling can improve both convenience and safety.</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <p class="small">
-        For hands-on comparisons of real card products across travel, rewards, fees and technology, start at
-        <a href="https://choose.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=comparison_section">
-          Choose.Creditcard
-        </a>.
-      </p>
-    </section>
-
-    <!-- Cluster links -->
-    <section class="section">
-      <h2>Explore Key Technology Spokes</h2>
-      <div class="cluster-grid">
-        <a class="cluster-card" href="https://bitcoinpay.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=cluster_bitcoinpay">
-          <h3>BitcoinPay.Creditcard</h3>
-          <p>How Bitcoin-linked card payments are routed and settled.</p>
-        </a>
-        <a class="cluster-card" href="https://btcpay.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=cluster_btcpay">
-          <h3>BTCPay.Creditcard</h3>
-          <p>Merchant-side gateways and crypto acceptance infrastructure.</p>
-        </a>
-        <a class="cluster-card" href="https://tokens.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=cluster_tokens">
-          <h3>Tokens.Creditcard</h3>
-          <p>Tokenised rewards, governance and incentive structures.</p>
-        </a>
-        <a class="cluster-card" href="https://defipay.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=cluster_defipay">
-          <h3>DefiPay.Creditcard</h3>
-          <p>DeFi-linked card products and yield routing models.</p>
-        </a>
-        <a class="cluster-card" href="https://virtualpay.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=cluster_virtualpay">
-          <h3>VirtualPay.Creditcard</h3>
-          <p>Virtual card numbers, controls and digital wallet usage.</p>
-        </a>
-      </div>
-    </section>
-
-    <!-- Collection section -->
-    <section class="section">
-      <h2>Part of The CreditCard Collection</h2>
-      <p class="small">
-        CC.Creditcard is the brand anchor of <strong>The CreditCard Collection</strong> — a family of focused microsites and comparison hubs operated by ronarn AS. Each domain has a clear job: explain one topic well, then connect you to structured tools when you are ready to compare products.
-      </p>
-      <p class="small">
-        The project does not issue cards or provide individual financial advice. Instead, it restates how features, fees and protections appear in official documentation, helping you ask better questions before applying, upgrading or closing accounts.
-      </p>
-      <p class="small">
-        This site and its connected spokes are informational only. Always read the full terms from issuers and card networks, and consider seeking independent professional advice for decisions that affect your finances.
-      </p>
-
-      <!-- Root (Choose.Creditcard) snippet using Comparison hub name -->
-      <div class="hub-link">
-        <a href="https://choose.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=minisite_to_hub"
-           class="text-sm text-slate-600 hover:text-slate-900">
-          Learn more at the Comparison hub
-        </a>
-      </div>
-    </section>
-
-    <!-- Bottom CTA -->
-    <section class="section">
-      <h2>Start Your Journey at Choose.Creditcard</h2>
-      <p class="small">
-        Use CC.Creditcard to understand the idea behind The CreditCard Collection — then move into the main hub to explore guides, comparisons and topic-specific minisites that match how you actually use cards.
-      </p>
-      <a class="cta" href="https://choose.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=bottom_cta">
-        Go to Choose.Creditcard
-      </a>
-    </section>
-  </main>
-
-  <footer class="mini-footer">
-    <p class="mini-footer-main">© 2025 The CreditCard Collection — ronarn AS</p>
-    <p class="mini-footer-contact">
-      Contact: <a href="mailto:support@cc.creditcard">support@cc.creditcard</a>
+  <!-- Network explanation -->
+  <section id="network" class="section">
+    <h2>The CreditCard Collection — How It Works</h2>
+    <p>
+      The network is built on a layered structure for clarity and SEO separation:
     </p>
-  </footer>
+
+    <ul class="list-disc space-y-2 pl-5 text-slate-300">
+      <li><strong>Choose.Creditcard</strong> – main comparison hub with structured sub-hubs (Travel, Rewards, Loyalty, Tech, Crypto, etc.)</li>
+      <li><strong>Fin.Creditcard</strong> – high-level explainer for payments, networks, virtual cards, tap-to-pay and modern card tech</li>
+      <li><strong>150+ Minisites</strong> – each premium .creditcard domain focuses on one specific topic, linking back to the correct hub</li>
+      <li><strong>Directory.Creditcard</strong> – index of all minisites in the network</li>
+    </ul>
+
+    <p class="mt-4 text-sm text-slate-400">
+      Everything is educational only — not financial advice, not issuer-sponsored and not promotional.
+    </p>
+  </section>
+
+  <!-- Hub links -->
+  <section id="links" class="section">
+    <h2>Main Hubs in the Network</h2>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mt-6">
+      <a class="cluster-card" href="https://choose.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hub_choose">
+        <h3>Choose.Creditcard</h3>
+        <p>Main comparison hub with 15 structured sub-hubs.</p>
+      </a>
+      <a class="cluster-card" href="https://fin.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hub_fin">
+        <h3>Fin.Creditcard</h3>
+        <p>Network-level overview of modern card systems.</p>
+      </a>
+      <a class="cluster-card" href="https://directory.creditcard/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hub_directory">
+        <h3>Directory.Creditcard</h3>
+        <p>Full list of all premium minisites.</p>
+      </a>
+
+      <a class="cluster-card" href="https://choose.creditcard/technology/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hub_technology">
+        <h3>Technology hub</h3>
+        <p>Virtual cards, NFC, wallets, security.</p>
+      </a>
+      <a class="cluster-card" href="https://choose.creditcard/travel/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hub_travel">
+        <h3>Travel & FX hub</h3>
+        <p>Lounge access, FX fees, travel perks.</p>
+      </a>
+      <a class="cluster-card" href="https://choose.creditcard/crypto/?utm_source=cc.creditcard&utm_medium=referral&utm_campaign=hub_crypto">
+        <h3>Crypto hub</h3>
+        <p>Crypto-linked cards, Web3 rewards, on/off-ramps.</p>
+      </a>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="section">
+    <h2>About The CreditCard Collection</h2>
+    <p class="small">
+      CC.Creditcard is the root identity of The CreditCard Collection — an independent educational network by ronarn AS (Norway).
+      The project focuses on transparency, documentation-based explanations and structured comparisons using only publicly available information.
+    </p>
+
+    <p class="small mt-4">
+      Contact: <a href="mailto:support@cc.creditcard" class="underline">support@cc.creditcard</a>
+    </p>
+  </section>
+
+</main>
+
+<footer class="mini-footer">
+  <p class="mini-footer-main">© 2025 The CreditCard Collection — ronarn AS</p>
+  <p class="mini-footer-contact">Contact: <a href="mailto:support@cc.creditcard">support@cc.creditcard</a></p>
+</footer>
+
 </body>
 </html>
